--- a/Gerenciamento-de-Carros/Gerenciamento-de-Carros.csproj
+++ b/Gerenciamento-de-Carros/Gerenciamento-de-Carros.csproj
@@ -86,8 +86,10 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\ArrayList.cs" />
     <Compile Include="Classes\CarroBO.cs" />
     <Compile Include="Classes\CarroDAO.cs" />
+    <Compile Include="Classes\SQLException.cs" />
     <Compile Include="Forms\Carros.aspx.cs">
       <DependentUpon>Carros.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
