--- a/Gerenciamento-de-Carros/Web.config
+++ b/Gerenciamento-de-Carros/Web.config
@@ -4,6 +4,9 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <connectionStrings>
+    <add connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=D:\Guilherme\Desenvolvimento\Projetos\Web\Gerenciamento-de-Carros\Gerenciamento-de-Carros\App_Data\DB_Gerenciamento-de-Carros.mdf;Integrated Security=True" name="Conexao"/>
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2"/>
     <httpRuntime targetFramework="4.5.2"/>
